--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "dexie": "4.0.1",
-    "@supabase/supabase-js": "2.48.1"
+    "@supabase/supabase-js": "2.48.1",
+    "xlsx": "0.18.5",
+    "qrcode": "1.5.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
